--- a/class.html
+++ b/class.html
@@ -9,12 +9,12 @@
 <body class="classbody">
 
     <div class="holder">
-        <h1>Class</h1>
+        <h1>Home</h1>
         
     </div>
     <table class="center">
         <tr>
-        <td><img src="homeIcon.jpg" alt="Home" width="150w"></td>
+        <td><img src="588a6660d06f6719692a2d16.png" alt="Home" width="150w"></td>
         </tr>
         </table>
     
@@ -62,8 +62,6 @@
 </pre>
 </body>
 <footer>
-    By: Le & Andrew <br>
-    Email : ldinh00@g.uafs.edu <br/>
-    Email : arobbi00@g.uafs.edu 
+    By: Le & Andrew
 </footer>
 </html>
